--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li class="active"><a href="#home" class="scroll-link">Home</a></li>
                     <li><a href="#aboutMe" class="scroll-link">About Me</a></li>
                     <li><a href="#services" class="scroll-link">Services</a></li>
-                    <li><a href="#contactUs" class="scroll-link">Contact Us</a></li>
+                    <li><a href="#contactUs" class="scroll-link">Contact Me</a></li>
                 </ul>
             </div>
             <!--/.navbar-collapse-->
@@ -279,16 +279,16 @@
             <div class="row">
                 <div class="heading text-center">
                     <!-- Heading -->
-                    <h2>Contact Us</h2>
+                    <h2>Contact Me</h2>
                     <p>Reach out via any of the platforms below:</p>
                 </div>
             </div>
 
             <div class="row mrgn30">
 
-                <!-- Spigot -->
+                <!-- Spigot link -->
                 <div class="col-md-3 col-sm-6">
-                    <a href="https://www.spigotmc.org/members/your-spigot-username" target="_blank" class="contact-link">
+                    <a href="https://www.spigotmc.org/members/kuramastone.221523/" target="_blank" class="contact-link">
                         <div class="contact-icon-container">
                             <div class="contact-icon-padding">
                                 <img src="images/spigot.png" alt="Spigot" class="contact-icon">
@@ -310,7 +310,6 @@
                     </a>
                 </div>
 
-                <!-- GitHub -->
                 <div class="col-md-3 col-sm-6">
                     <a href="https://github.com/KuramaStone" target="_blank" class="contact-link">
                         <div class="contact-icon-container">
