--- a/index.html
+++ b/index.html
@@ -263,7 +263,8 @@
                             Large Plugins</br>
                             7+ Days Delivery</br>
                             Minigames</br>
-                            Skyblock, Factions, Prison Cores</br>
+                            Animated Blocks</br>
+                            Powerful customizations</br>
                         </strong>
                     </li>
                 </ul>
