--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="da-slide">
                     <h2>Proven Expertise</h2>
-                    <p>With over 10 years of experience, I deliver reliable and optimized plugins for all your
+                    <p>With over 12 years of experience, I deliver reliable and optimized plugins for all your
                         needs.</p>
                     <div class="da-img"></div>
                 </div>
@@ -105,13 +105,18 @@
     <div class="container">
         <div class="heading text-center">
             <h2>About Me</h2>
-            <p>I’m KuramaStone, a developer with a decade of experience in creating custom Minecraft plugins and
-                more.</p>
+            <p> I’m KuramaStone, a developer with a decade of experience in creating custom Minecraft plugins and
+                more. I'm 24 and live in the United States. I've been coding plugins since 2014. I am familiar
+                with programming even beyond java although it is my specialty, and I have worked fluidly between
+                languages and learning as needed. Plugins, Mods, and Discord Bots are all within my ability. 
+                My github repo contains many example products with very professional code.</p>
         </div>
         <div class="row">
             <div class="col-md-4">
                 <img src="images/ref3.png" class="fitImage" alt="img"/>
                 <img src="images/ref4.png" class="fitImage" alt="img"/>
+                <img src="images/ref1.png" class="fitImage" alt="img"/>
+                <img src="images/ref2.png" class="fitImage" alt="img"/>
             </div>
             <div class="col-md-8">
                 <h3>My Background</h3>
@@ -121,9 +126,9 @@
             </div>
             <div class="col-md-6">
                 <img src="images/ref6.png" class="fitImage" alt="img"/>
-                <img src="images/ref1.png" class="fitImage" alt="img"/>
-                <img src="images/ref2.png" class="fitImage" alt="img"/>
                 <img src="images/ref5.png" class="fitImage" alt="img"/>
+                <img src="images/ref7.png" class="fitImage" alt="img"/>
+                <img src="images/ref8.png" class="fitImage" alt="img"/>
             </div>
         </div>
         <div class="row">
@@ -165,8 +170,8 @@
             <!-- item -->
             <div class="col-md-4 text-center">
                 <i class="fa fa-wrench fa-2x circle"></i>
-                <h3><span class="id-color">Total Customization</span></h3>
-                <p>Gain control over every aspect of your server with fully customizable messages, GUIs, and more.</p>
+                <h3><span class="id-color">Mod Development</span></h3>
+                <p>Forge and Fabric mods make up a large amount of modern work! Contact me if you would like to see what large youtubers I've worked with!</p>
             </div>
             <!-- end: -->
 
@@ -175,6 +180,18 @@
                 <i class="fa fa-tachometer fa-2x circle"></i>
                 <h3><span class="id-color">Performance Optimization</span></h3>
                 <p>Ensure smooth server operation with lightweight and efficient plugins designed for performance.</p>
+            </div>
+            <!-- end: -->
+
+        </div>
+        </div class="row">
+        
+
+            <!-- item -->
+            <div class="col-md-4 text-center">
+                <i class="fa fa-gamepad fa-2x circle"></i>
+                <h3><span class="id-color">Seasonal Events</span></h3>
+                <p>Develop plugins for mini-games and server-wide events that keep players engaged.</p>
             </div>
             <!-- end: -->
 
@@ -193,16 +210,6 @@
                 <p>Create custom currencies, leveling systems, and intricate RPG mechanics for your server.</p>
             </div>
             <!-- end: -->
-
-            <!-- item -->
-            <div class="col-md-4 text-center">
-                <i class="fa fa-gamepad fa-2x circle"></i>
-                <h3><span class="id-color">Event Plugins</span></h3>
-                <p>Develop plugins for mini-games and server-wide events that keep players engaged.</p>
-            </div>
-            <!-- end: -->
-
-        </div>
     </div>
 </section>
 <section id="plans" class="page-section">
@@ -219,7 +226,7 @@
                     <li class="plan-name">Basic
                     </li>
                     <li class="plan-price">
-                        <strong>$14.99</strong> / one-time
+                        <strong>$29.99</strong> / one-time
                     </li>
                     <li>
                         <strong>
@@ -238,7 +245,7 @@
                     <li class="plan-name">Standard
                     </li>
                     <li class="plan-price">
-                        <strong>$34.99</strong> / one-time
+                        <strong>$79.99</strong> / one-time
                     </li>
                     <li>
                         <strong>
@@ -256,15 +263,15 @@
                     <li class="plan-name">Advanced
                     </li>
                     <li class="plan-price">
-                        <strong>$59.99+</strong> / one-time
+                        <strong>$149.99+</strong> / one-time
                     </li>
                     <li>
                         <strong>
                             Large Plugins</br>
                             7+ Days Delivery</br>
                             Minigames</br>
-                            Animated Blocks</br>
-                            Powerful customizations</br>
+                            Powerful Animations</br>
+                            Custom Entities</br>
                         </strong>
                     </li>
                 </ul>
