--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                 <img src="images/discord.png" alt="Discord" class="contact-icon">
                             </div>
                         </div>
-                        <h3>Discord</h3>
+                        <h3>Discord @thefirstbrooke</h3>
                     </a>
                 </div>
 
